application/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: rest-http-example
    app.kubernetes.io/component: rest-http-example
    app.kubernetes.io/instance: rest-http-example
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: rest-http-example-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
  name: rest-http-example
  namespace: demo4
spec:
  host: rest-http-example-demo4.apps.cluster-xgjsj.xgjsj.sandbox977.opentlc.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: rest-http-example
    weight: 100
  wildcardPolicy: None
